# RAG_Udemy_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
