[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "chromadb>=1.4.1",
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "jq>=1.11.0",
    "langchain>=1.2.7",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.0",
    "langgraph-supervisor>=0.0.31",
    "llvmlite>=0.42.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "msoffcrypto-tool>=6.0.0",
    "numba>=0.59.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.31",
    "wikipedia>=1.4.0",
]
